--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -1,3 +1,5 @@
+name: Build and Deploy
+
 on:
   push:
    branches: [ master ]
@@ -10,11 +12,11 @@ jobs:
 
     steps:
     - name: Configure NGINX
-        run: |
-          sudo apt-get update
-          sudo apt-get install nginx
-          sudo rm /etc/nginx/sites-enabled/default
-          sudo cp /path/to/nginx.conf /etc/nginx/sites-available/my-app
-          sudo ln -s /etc/nginx/sites-available/my-app /etc/nginx/sites-enabled/
-          sudo nginx -t
-          sudo systemctl reload nginx
+      run: |
+        sudo apt-get update
+        sudo apt-get install nginx
+        sudo rm /etc/nginx/sites-enabled/default
+        sudo cp /path/to/nginx.conf /etc/nginx/sites-available/my-app
+        sudo ln -s /etc/nginx/sites-available/my-app /etc/nginx/sites-enabled/
+        sudo nginx -t
+        sudo systemctl reload nginx
