--- a/.github/workflows/nginx.yml
+++ b/.github/workflows/nginx.yml
@@ -16,7 +16,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install nginx
         sudo rm /etc/nginx/sites-enabled/default
-        # sudo cp /path/to/nginx.conf /etc/nginx/sites-available/my-app
+        sudo cp /path/to/nginx.conf /etc/nginx/sites-available/my-app
         # sudo ln -s /etc/nginx/sites-available/my-app /etc/nginx/sites-enabled/
         # sudo nginx -t
         # sudo systemctl reload nginx
