--- a/.github/workflows/secrets_test.yml
+++ b/.github/workflows/secrets_test.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Check_Secrets_Value
-      - run: |
+        run: |
           echo ${{ secrets.DOCKER_REGISTRY }}
           echo ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           echo ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
