--- a/.github/workflows/secrets_test.yml
+++ b/.github/workflows/secrets_test.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Check_Secrets_Value
         run: |
-          echo ${{ vars.DOCKER_REGISTRY }}
-          echo ${{ vars.DOCKER_REGISTRY_USERNAME }}
-          echo ${{ vars.DOCKER_REGISTRY_PASSWORD }}
+          echo DOCKER_REGISTRY
+          echo DOCKER_REGISTRY_USERNAME
+          echo DOCKER_REGISTRY_PASSWORD
 
