--- a/.github/workflows/secrets_test.yml
+++ b/.github/workflows/secrets_test.yml
@@ -17,4 +17,5 @@ jobs:
           echo DOCKER_REGISTRY
           echo DOCKER_REGISTRY_USERNAME
           echo DOCKER_REGISTRY_PASSWORD
+          echo ${{ env.FRONTEND_VER_ROLLBACK }}
 
