--- a/.github/workflows/secrets_test.yml
+++ b/.github/workflows/secrets_test.yml
@@ -10,12 +10,13 @@ jobs:
       DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }} # Add the IP address of the Docker private registry as a secret
       DOCKER_REGISTRY_USERNAME: ${{ vars.DOCKER_REGISTRY_USERNAME }} # Add the username for the Docker private registry as a secret
       DOCKER_REGISTRY_PASSWORD: ${{ vars.DOCKER_REGISTRY_PASSWORD }} # Add the password for the Docker private registry as a secret
+      FRONTEND_VER_ROLLBACK:  ${{ vars.FRONTEND_VER_ROLLBACK }}
 
     steps:
       - name: Check_Secrets_Value
         run: |
-          echo DOCKER_REGISTRY
-          echo DOCKER_REGISTRY_USERNAME
-          echo DOCKER_REGISTRY_PASSWORD
+          echo ${{ env.DOCKER_REGISTRY }}
+          echo ${{ env.DOCKER_REGISTRY_USERNAME }}
+          echo ${{ env.DOCKER_REGISTRY_PASSWORD }}
           echo ${{ env.FRONTEND_VER_ROLLBACK }}
 
