--- a/.github/workflows/secrets_test.yml
+++ b/.github/workflows/secrets_test.yml
@@ -15,8 +15,9 @@ jobs:
     steps:
       - name: Check_Secrets_Value
         run: |
+          version=${{ env.FRONTEND_VER_ROLLBACK }}
           echo ${{ env.DOCKER_REGISTRY }}
           echo ${{ env.DOCKER_REGISTRY_USERNAME }}
           echo ${{ env.DOCKER_REGISTRY_PASSWORD }}
-          echo ${{ env.FRONTEND_VER_ROLLBACK }}
+          echo version
 
