--- a/.github/workflows/secrets_test.yml
+++ b/.github/workflows/secrets_test.yml
@@ -19,5 +19,5 @@ jobs:
           echo ${{ env.DOCKER_REGISTRY }}
           echo ${{ env.DOCKER_REGISTRY_USERNAME }}
           echo ${{ env.DOCKER_REGISTRY_PASSWORD }}
-          echo version
+          echo $version
 
