--- a/.github/workflows/secrets_test.yml
+++ b/.github/workflows/secrets_test.yml
@@ -15,8 +15,8 @@ jobs:
     steps:
       - name: Check_Secrets_Value
         run: |
-          echo ${{ env.DOCKER_REGISTRY }}
-          echo ${{ env.DOCKER_REGISTRY_USERNAME }}
-          echo ${{ env.DOCKER_REGISTRY_PASSWORD }}
+          echo ${{ secrets.DOCKER_REGISTRY }}
+          echo ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          echo ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
           echo $FRONTEND_VER_ROLLBACK
 
