--- a/.github/workflows/folder_change_workflow.yml
+++ b/.github/workflows/folder_change_workflow.yml
@@ -1,6 +1,10 @@
 name: Folder Change Workflow
 
 on:
+    pull_request:
+        types: [closed]
+        branches:
+          - main
     push:
         paths:
             - 'webapp/client/**'
