--- a/.github/workflows/folder_change_workflow.yml
+++ b/.github/workflows/folder_change_workflow.yml
@@ -5,15 +5,25 @@ on:
         types: [closed]
         branches:
           - main
-    push:
-        paths:
-            - 'webapp/client/**'
 
 jobs:
     build:
         runs-on: ubuntu-latest
         if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
         steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
+
+            - name: Only run if changes to specific folder path and subdirectory
+              id: changes-detected
+              run: |
+                if git diff-tree --name-only --no-commit-id ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -E '^path/to/specific/folder/(|.*\/)' > /dev/null; then
+                echo ::set-output name=changes-detected::true
+                else
+                echo ::set-output name=changes-detected::false
+                fi
+
             - name: Check_Steps
+              if: steps.changes-detected.outputs.changes-detected == 'true'
               run: |
                 echo "The Workflow is running successfully"
