--- a/.github/workflows/folder_change_workflow.yml
+++ b/.github/workflows/folder_change_workflow.yml
@@ -17,7 +17,7 @@ jobs:
             - name: Only run if changes to specific folder path and subdirectory
               id: changes-detected
               run: |
-                if git diff-tree --name-only --no-commit-id ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -E '^path/to/specific/folder/(|.*\/)' > /dev/null; then
+                if git diff-tree --name-only --no-commit-id ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }} | grep -E 'webapp/client/(|.*\/)' > /dev/null; then
                 echo ::set-output name=changes-detected::true
                 else
                 echo ::set-output name=changes-detected::false
