--- a/.github/workflows/_reusable_workflow.yml
+++ b/.github/workflows/_reusable_workflow.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: ${{ github.event.inputs.secrets_vars}}
+    environment: DEV
     steps:
 
       - uses: actions/checkout@v3
