--- a/.github/workflows/_reusable_workflow.yml
+++ b/.github/workflows/_reusable_workflow.yml
@@ -3,6 +3,9 @@ name: Reusable Workflow Test
 on:
   workflow_call:
     inputs:
+      field:
+        required: true
+        type: string
       environment:
         required: true
         type: string
@@ -10,7 +13,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: DEV
+    environment: ${{ github.event.inputs.environment }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -18,7 +21,9 @@ jobs:
 
       - name: Check Value
         run: |
-          echo "Environment you are working in is:"
+          echo "Field you are working in is:"
+          echo ${{ github.event.inputs.field }}
+          echo "Environment your working on is:"
           echo ${{ github.event.inputs.environment }}
-          echo "Secrets and Variable you are working with is:"
-          echo ${{ vars.REACT_APP_API_URL }}
+          echo "Variable value is:"
+          echo ${{ vars.REACT_APP_API_URL[environment] }}
