--- a/.github/workflows/_reusable_workflow.yml
+++ b/.github/workflows/_reusable_workflow.yml
@@ -26,7 +26,6 @@ jobs:
           echo "Environment your working on is:"
           echo ${{ github.event.inputs.environment }}
           echo "Variable value is:"
-          echo ${{ vars.REACT_APP_API_URL[vars.environment] }}
+          echo ${{ REACT_APP_API_URL[environment] }}
 
-vars:
-  environment: ${{ github.event.inputs.environment }}
+environment: ${{ github.event.inputs.environment }}
