--- a/.github/workflows/_reusable_workflow.yml
+++ b/.github/workflows/_reusable_workflow.yml
@@ -13,9 +13,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env: 
-        field: ${{ github.event.inputs.field }}
-        environment: ${{ github.event.inputs.environment }}
+    environment: ${{ github.event.inputs.environment }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -24,6 +22,8 @@ jobs:
       - name: Check Value
         run: |
           echo "Field you are working in is:"
-          echo $field
+          echo ${{ github.event.inputs.field }}
           echo "Environment your working on is:"
-          echo $environment
+          echo ${{ github.event.inputs.environment }}
+          echo "Variable value is:"
+          echo ${{ env.REACT_APP_API_URL }}
