--- a/.github/workflows/_reusable_workflow.yml
+++ b/.github/workflows/_reusable_workflow.yml
@@ -2,11 +2,15 @@ name: Reusable Workflow Test
 
 on:
   workflow_call:
+    inputs:
+        environment:
+            required: true
+            type: string
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: DEV
+    environment: ${{ github.event.inputs.environment}}
     steps:
       - uses: actions/checkout@v3
         with:
