--- a/.github/workflows/_reusable_workflow.yml
+++ b/.github/workflows/_reusable_workflow.yml
@@ -6,7 +6,9 @@ on:
         environment:
             required: true
             type: string
-
+        env_file: 
+            required: true
+            type: string
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,10 +20,10 @@ jobs:
 
       - name: Check Value
         run: |
-          cat $env_file
+          cat ${{ inputs.env_file}}
           cd webapp/client
-          ls -la ${{ github.workspace }}/webapp/client/.env.production
-          sed -i -e 's,ETBOX_API_ENV_URL,${{ vars.REACT_APP_API_URL }},g' ${{ github.workspace }}/webapp/client/.env.production
-          cat ${{ github.workspace }}/webapp/client/.env.production
+          ls -la ${{ github.workspace }}/webapp/client/.env.${{ inputs.env_file}}
+          sed -i -e 's,ETBOX_API_ENV_URL,${{ vars.REACT_APP_API_URL }},g' ${{ github.workspace }}/webapp/client/.env.${{ inputs.env_file}}
+          cat ${{ github.workspace }}/webapp/client/.env.${{ inputs.env_file}}
         env:
-            env_file: webapp/client/.env.production
+            env_file: webapp/client/.env.${{ inputs.env_file}}
