--- a/.github/workflows/_dev_reusable.yml
+++ b/.github/workflows/_dev_reusable.yml
@@ -8,4 +8,4 @@ jobs:
     uses: ./.github/workflows/_reusable_workflow.yml
     with:
         environment: DEV
-        env_file: production
+        env_file: development
