--- a/.github/workflows/_prod_reusable.yml
+++ b/.github/workflows/_prod_reusable.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Development:
+  Production:
     uses: ./.github/workflows/_reusable_workflow.yml
     with:
         environment: PROD
