--- a/.github/workflows/_test_resusable.yml
+++ b/.github/workflows/_test_resusable.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  Development:
+  Test:
     uses: ./.github/workflows/_reusable_workflow.yml
     with:
         environment: TEST
