--- a/.github/workflows/_reusable_workflow.yml
+++ b/.github/workflows/_reusable_workflow.yml
@@ -20,10 +20,10 @@ jobs:
 
       - name: Check Value
         run: |
-          cat webapp/client/.env.${{ inputs.env_file}}
-          cd webapp/client
-          ls -la ${{ github.workspace }}/webapp/client/.env.${{ inputs.env_file}}
-          sed -i -e 's,ETBOX_API_ENV_URL,${{ vars.REACT_APP_API_URL }},g' ${{ github.workspace }}/webapp/client/.env.${{ inputs.env_file}}
-          cat ${{ github.workspace }}/webapp/client/.env.${{ inputs.env_file}}
+            cat $env_file
+            cd webapp/client
+            ls -la ${{ github.workspace }}/$env_file
+            sed -i -e 's,ETBOX_API_ENV_URL,${{ vars.REACT_APP_API_URL }},g' ${{ github.workspace }}/$env_file
+            cat ${{ github.workspace }}/$env_file
         env:
             env_file: webapp/client/.env.${{ inputs.env_file}}
