--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,22 +1,17 @@
 name: CI on Successful PR Merge to Main
 
 on:
-  push:
-    branches:
-      - main
+  pull_request:
+    types:
+      - closed
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
       - name: Check if it's a merge to main
+        if: github.event.pull_request.merged == true && github.event.pull_request.base.ref == 'main'
         run: |
-          if [ "${GITHUB_REF}" == "refs/heads/main" ]; then
-            echo "This is a merge to the main branch."
-            echo "Add your build and test steps here"
-          else
-            echo "This is not a merge to the main branch. Skipping workflow."
-          fi
+          echo "This is a successful merge to the main branch."
+          echo "Add your build and test steps here"
