added pr and manual trigger

--- a/.github/workflows/frontend_commit.yml
+++ b/.github/workflows/frontend_commit.yml
@@ -1,7 +1,11 @@
 name: CI on Dev Branch
 
 on:
+  workflow_dispatch:
   push:
+    branches:
+      - Development
+  pull_request:
     branches:
       - Development
 
