--- a/.github/workflows/frontend_commit.yml
+++ b/.github/workflows/frontend_commit.yml
@@ -4,10 +4,10 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - Development
+      - development
   pull_request:
     branches:
-      - Development
+      - development
 
 jobs:
   build:
